# bmi

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  dashboard.py  forms.py  models.py
app/auth/: routes.py
app/auth/templates/: login.html  register.html
app/charts/: routes.py
app/charts/templates/: index.html  measurement.html
app/static/: ui-control.js
app/templates/: index.html  layout.html  login.html  manage-data.html  measurement.html  register.html
migrations/versions/: 257e2b192212_initial_migration.py  96ea97c08768_initial_migration.py  b4714aaab316_initial_migration.py
