[tool.poetry]
name = "bmi"
version = "0.1.0"
description = "BMI for Age graphing"
authors = ["Pixels & Bytes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-migrate = "^4.0.1"
python-dotenv = "^0.21.0"
flask-session = "^0.4.0"
flask-sqlalchemy = "^3.0.2"
flask-login = "^0.6.2"
wtforms = "^3.0.1"
flask-wtf = "^1.0.1"
email-validator = "^1.3.0"
pandas = "^1.5.2"
plotly = "^5.11.0"
openpyxl = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
